Fixed The Right side Gap near scroll bar

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,7 @@
 @theme{
     --breakpoint-tb: 900px;
 }
+body{
+     margin: 0;
+  overflow-x: hidden;
+}
